# LangTrans

./: .editorconfig  .gitignore  .yamllint.yml  CODE_OF_CONDUCT.md  FunctionTest.py  LICENSE  LangTrans.py  README.md  builtin.yaml  command_line.py  pyproject.toml  requirements.txt  source.clisp  source.yaml  trans.py
.github/workflows/: deployement.yml  lint.yml  python-package.yml
LangTrans/: LangTrans.py
docs/: conf.py  genindex.html  index.html  index.rst  requirements.txt  search.html  searchindex.js  trans.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: objects.inv  py-modindex.html
docs/_build/html/_sources/: index.rst.txt
example/: README.md  source.yaml  target.yaml
pulls/53/: review
src/: builtin.yaml
test/: FunctionTest.py
tests/: test_LangTrans.py
